# cpp_project_template

./: .gdbinit  .gitignore  CMakeLists.txt  Dockerfile  README.md  compile_commands.json  conanfile.py
.devcontainer/: devcontainer.json
include/example_lib/: example_lib.hpp
scripts/: README.md  pyproject.toml
scripts/scripts/: hello_world.py
src/: main.cpp
src/example_lib/: CMakeLists.txt  example_lib.cpp
tests/: CMakeLists.txt  unit_test.cpp
